# o3-sigma-model-TRG

./: .gitignore  2point.cpp  CMakeLists.txt  gauss_legendre_test.cpp  gauss_quadrature.cpp  gauss_quadrature_2point.cpp  gauss_quadrature_HOTRG.cpp  gauss_quadrature_HOTRG_1point.cpp  gauss_quadrature_HOTRG_1point_alt.cpp  gauss_quadrature_HOTRG_2point.cpp  gauss_quadrature_HOTRG_2point_alt.cpp  gauss_quadrature_HOTRG_2point_manual.cpp  gauss_quadrature_HOTRG_alt.cpp  gauss_quadrature_HOTRG_mass.cpp  gauss_quadrature_HOTRG_mass_alt.cpp  gauss_quadrature_HOTRG_mass_manual.cpp  gauss_quadrature_HOTRG_mass_v1.cpp  gauss_quadrature_TRG.cpp  gauss_quadrature_TRG_2point.cpp  main.cpp  spherical_harmonics.cpp  spherical_harmonics_2point.cpp  spherical_harmonics_HOTRG.cpp  spherical_harmonics_HOTRG_1point_alt.cpp  spherical_harmonics_HOTRG_2point.cpp  spherical_harmonics_HOTRG_2point_alt.cpp  spherical_harmonics_HOTRG_2point_manual.cpp  spherical_harmonics_HOTRG_alt.cpp  spherical_harmonics_HOTRG_mass_alt.cpp  spherical_harmonics_HOTRG_mass_v1.cpp  spherical_harmonics_TRG.cpp  test.cpp
libraries/: CMakeLists.txt
libraries/include/: CG.hpp  HOTRG.hpp  TRG.hpp  frac.hpp  gauss_quadrature.hpp  impure_tensor.hpp  legendre_root.hpp  legendre_zero_point.hpp  spherical_harmonics.hpp  tensor.hpp  time_counter.hpp
libraries/src/: CG.cpp  HOTRG.cpp  TRG.cpp  frac.cpp  gauss_quadrature.cpp  impure_tensor.cpp  legendre_root.cpp  legendre_zero_point.cpp  spherical_harmonics.cpp  tensor.cpp  time_counter.cpp
