cmake_minimum_required(VERSION 2.8)
project(o3_sigma_model)

add_subdirectory(./libraries)

set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_COMPILER icpc)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "-std=c++11 -mkl -axMIC-AVX512 -lgsl -lgslcblas")

add_executable(gauss_quadrature_TRG gauss_quadrature_TRG.cpp)
target_link_libraries(gauss_quadrature_TRG gauss_quadrature TRG tensor)

add_executable(gauss_quadrature_HOTRG gauss_quadrature_HOTRG.cpp)
target_link_libraries(gauss_quadrature_HOTRG gauss_quadrature HOTRG tensor)

add_executable(gauss_quadrature_HOTRG_2point gauss_quadrature_HOTRG_2point.cpp)
target_link_libraries(gauss_quadrature_HOTRG_2point gauss_quadrature HOTRG tensor impure_tensor)

add_executable(gauss_quadrature_HOTRG_2point_alt gauss_quadrature_HOTRG_2point_alt.cpp)
target_link_libraries(gauss_quadrature_HOTRG_2point_alt gauss_quadrature HOTRG tensor impure_tensor)

add_executable(gauss_quadrature_HOTRG_2point_manual gauss_quadrature_HOTRG_2point_manual.cpp)
target_link_libraries(gauss_quadrature_HOTRG_2point_manual gauss_quadrature HOTRG tensor impure_tensor)

add_executable(spherical_harmonics_TRG spherical_harmonics_TRG.cpp)
target_link_libraries(spherical_harmonics_TRG spherical_harmonics TRG tensor)

add_executable(spherical_harmonics_HOTRG_2point spherical_harmonics_HOTRG_2point.cpp)
target_link_libraries(spherical_harmonics_HOTRG_2point spherical_harmonics HOTRG tensor impure_tensor)

add_executable(spherical_harmonics_HOTRG_2point_alt spherical_harmonics_HOTRG_2point_alt.cpp)
target_link_libraries(spherical_harmonics_HOTRG_2point_alt spherical_harmonics HOTRG tensor impure_tensor)

add_executable(spherical_harmonics_HOTRG_2point_manual spherical_harmonics_HOTRG_2point_manual.cpp)
target_link_libraries(spherical_harmonics_HOTRG_2point_manual spherical_harmonics HOTRG tensor impure_tensor)

add_executable(gauss_legendre_test gauss_legendre_test.cpp)
target_link_libraries(gauss_legendre_test legendre_zero_point)