cmake_minimum_required(VERSION 2.8)
project(lib)

if (APPLE)
    set(CMAKE_CXX_STANDARD 11)
    set(CMAKE_CXX_FLAGS "-std=c++11 -fopenmp -Wl,-stack_size -Wl,100000000 -lgsl -lgslcblas")

    include_directories(/opt/intel/mkl/include)
    link_directories(/opt/intel/mkl/lib)
    include_directories(/usr/local/include)
    #link_directories(/usr/local/lib)
else ()
    set(CMAKE_CXX_COMPILER icpc)
    set(CMAKE_CXX_FLAGS "-std=c++11 -mkl -axMIC-AVX512 -qopenmp -lgsl -lgslcblas")
endif ()

add_library(spherical_harmonics STATIC ./src/spherical_harmonics.cpp)
add_library(gauss_quadrature STATIC ./src/gauss_quadrature.cpp)
add_library(frac STATIC ./src/frac.cpp)
add_library(CG STATIC ./src/CG.cpp)
add_library(legendre_zero_point STATIC ./src/legendre_zero_point.cpp)
add_library(TRG STATIC ./src/TRG.cpp)
add_library(HOTRG STATIC ./src/HOTRG.cpp)
add_library(tensor STATIC ./src/tensor.cpp)
add_library(impure_tensor STATIC ./src/impure_tensor.cpp)
target_include_directories(spherical_harmonics INTERFACE ./include)
target_include_directories(gauss_quadrature INTERFACE ./include)
target_include_directories(frac INTERFACE ./include)
target_include_directories(CG INTERFACE ./include)
target_include_directories(legendre_zero_point INTERFACE ./include)
target_include_directories(TRG INTERFACE ./include)
target_include_directories(HOTRG INTERFACE ./include)
target_include_directories(tensor INTERFACE ./include)
target_include_directories(impure_tensor INTERFACE ./include)

target_link_libraries(gauss_quadrature legendre_zero_point)